--- a/penguins.ipynb
+++ b/penguins.ipynb
@@ -10,6 +10,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Imports\n",
+    "\n",
+    "***\n",
+    "\n",
+    "We use pandas for DataFrame data structure.\n",
+    "\n",
+    "It allows us to investigate CSV files, amongst other features."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -20,6 +33,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load Data\n",
+    "\n",
+    "***\n",
+    "\n",
+    "Load the palmer penguins data set from a URL."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -27,6 +51,13 @@
    "source": [
     "# Load the penguins data set.\n",
     "df = pd.read_csv(\"https://raw.githubusercontent.com/mwaskom/seaborn-data/master/penguins.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The data is now loaded and we can ispect it."
    ]
   },
   {
@@ -218,6 +249,15 @@
    "source": [
     "# Let's have a look.\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Inspect Data\n",
+    "\n",
+    "***"
    ]
   },
   {
@@ -417,6 +457,33 @@
    "source": [
     "# Describe the data set.\n",
     "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# This will be big\n",
+    "\n",
+    "You **might** have a paragraph. Paragraphs have senences. You might have a paragraph. Paragraphs have senences. You might have a paragraph. Paragraphs have senences. You might have a paragraph. Paragraphs have senences.You might have a paragraph. Paragraphs have senences.\n",
+    "\n",
+    "If you want a second paragraph, leave a blank line! If you want a second paragraph, leave a blank line! If you want a second paragraph, leave a blank line! If you want a second paragraph, leave a blank line! If you want a second paragraph, leave a blank line! If you want a second paragraph, leave a blank line! \n",
+    "\n",
+    "## This will be slightly smaller\n",
+    "\n",
+    "- Bullet\n",
+    "  - Bullet\n",
+    "  - Bullet\n",
+    "- Point\n",
+    "- Lists\n",
+    "\n",
+    "### This will be slightly smaller again\n",
+    "\n",
+    "1. Numbered bullets.\n",
+    "2. Just use numbers.\n",
+    "3. What a mess.\n",
+    "\n",
+    "> The diffinition of stupidity is doing the same thing twice and expecting diffirent results! (Albert Einstein, false quote)"
    ]
   },
   {
