--- a/penguins.ipynb
+++ b/penguins.ipynb
@@ -6,7 +6,15 @@
    "source": [
     "# Palmer Penguins\n",
     "\n",
-    "This notebook contains my analysis of the famous palmer penguins dataset."
+    "***\n",
+    "\n",
+    "![Palmer](https://upload.wikimedia.org/wikipedia/commons/thumb/2/24/Antarctica_relief_location_map.jpg/240px-Antarctica_relief_location_map.jpg)\n",
+    "\n",
+    "![Penguins](img/lter_penguins.png)\n",
+    "\n",
+    "This notebook contains my analysis of the famous palmer penguins dataset.\n",
+    "\n",
+    "The data set is available [on GitHub](https://allisonhorst.github.io/palmerpenguins/)."
    ]
   },
   {
