Added math and tables

--- a/penguins.ipynb
+++ b/penguins.ipynb
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
        "Name: 0, dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
        "Name: sex, Length: 344, dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +457,7 @@
        "max         59.600000      21.500000         231.000000  6300.000000"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,6 +492,36 @@
     "3. What a mess.\n",
     "\n",
     "> The diffinition of stupidity is doing the same thing twice and expecting diffirent results! (Albert Einstein, false quote)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tables\n",
+    "\n",
+    "***\n",
+    "\n",
+    "| Species   |Bill Length (mm) | Body Masss (g)|\n",
+    "|-----------|----------------:|--------------:|\n",
+    "|Adelie     |            38.8 |          3701 |\n",
+    "|Chinstrap  |            48.8 |          3733 |\n",
+    "|Gento      |            47.5 |          5076 |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Math\n",
+    "\n",
+    "***\n",
+    "\n",
+    "$f(x) = x^2$\n",
+    "\n",
+    "$\\sum_{i=o}^{n-1} i$\n",
+    "\n",
+    "$\\bar{x} = \\frac{\\sum_{i=0}^{n-1} x_i} {n}$"
    ]
   },
   {
